trunk/Archive2/29/ce006967e56996/output
main.cpp: In function 'int main()':
main.cpp:8:11: error: no match for 'operator=' (operand types are 'ent' and 'ent')
     ent() = ent();
           ^
main.cpp:8:11: note: candidate is:
main.cpp:3:19: note: ent& ent::operator=(const ent&) &
 struct ent { ent& operator=(const ent&) &; };
                   ^
main.cpp:3:19: note:   no known conversion for implicit 'this' parameter from 'ent' to 'ent&'
main.cpp:9:11: error: lvalue required as left operand of assignment
     int() = int();
           ^
