trunk/Archive2/29/ce006967e56996/main.cpp

struct ant { };
struct ent { ent& operator=(const ent&) &; };
    
int main()
{
    ant() = ant();
    ent() = ent();
    int() = int();
}
